@@ -1,3 +1,11 @@
+2004-05-17  David Jee  <djee@redhat.com>
+
+	* gnu/java/awt/peer/gtk/GtkImagePainter.java
+	(setPixels): Change color model to the default model after
+	converting pixels.
+	* java/awt/image/MemoryImageSource.java
+	(newPixels): Set only the specified rectangle of pixels.
+
 2004-05-13  Thomas Fitzsimmons  <fitzsim@redhat.com>
 
 	* libgcj.spec.in (lib): Add -l-java-awt -l-java-applet
